Added fa-icons that work well. Just need to fix the current weather icon to match the others

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                 <div id="humidity" class="mainStats">Wind:</div>
                 <div id="uvIndex" class="mainStats">Humidity %:</div>
                 <div id="wind" class="mainStats">UV Index:</div>
+                <div id="icon"><img id="wIcon" src="" alt="Weather icon"></div>
+                
             </div>
             <div id="forecast">
                 <h4>5 Day Forecast:</h4>
